# denvm

./: .gitignore  README.md  meson.build
src/: decode.c  loader.c  main.c  output.c  xref.c
tests/: meson.build  test_decode.c  test_loader.c  test_xref.c
